--- a/css/stil.css
+++ b/css/stil.css
@@ -140,6 +140,7 @@ nav ul li:hover:not(.trenutna){
     text-decoration: underline;
     letter-spacing: 0.03em;
     text-shadow: 2px 2px 2px rgb(14, 9, 9);
+    background-color:  black;
 }
 .tekst p::first-letter{
     font-size: 170%;
