--- a/css/stil.css
+++ b/css/stil.css
@@ -89,14 +89,15 @@ nav ul li:hover:not(.trenutna){
 }
 .pocetna div ul {
     list-style-type:none;
-    vertical-align: center;
+    vertical-align: middle;
 }
 .pocetna div ul li{
     line-height: 0;
     vertical-align: middle;
 }
 .pocetna div ul li span{
-    display: inline-block;vertical-align: middle;
+    display: inline-block;
+    vertical-align: middle;
 }
 .slikaPocetna{
     background-image: url("../images/ja2.jpeg");
