--- a/css/stil.css
+++ b/css/stil.css
@@ -94,6 +94,7 @@ nav ul li:hover:not(.trenutna){
 .pocetna div ul li{
     line-height: 0;
     vertical-align: middle;
+    margin:3px;
 }
 .pocetna div ul li span{
     display: inline-block;
