--- a/css/stil.css
+++ b/css/stil.css
@@ -182,7 +182,7 @@ a{
     text-decoration: none;  
 }
 .faded{
-   
+    font-weight:bold; 
     color: rgba(255,255,255,0.5) !important;
     font-size: 0.85em !important;
 }
