--- a/css/stil.css
+++ b/css/stil.css
@@ -183,6 +183,7 @@ a{
 }
 .faded{
     font-weight:bold !important; 
+    font-style:italic !important; 
     color: rgba(255,255,255,0.5) !important;
     font-size: 0.85em !important;
 }
