--- a/css/stil.css
+++ b/css/stil.css
@@ -70,8 +70,6 @@ nav ul li:hover:not(.trenutna){
     width:90%;
     border-radius: 50px;
     color: rgb(76, 138, 85);
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    text-align: center;
     background-color: rgba(0, 0, 0, 0.8);
     visibility: hidden;
 }
@@ -146,7 +144,7 @@ nav ul li:hover:not(.trenutna){
     margin-top:3px;
     color: rgb(160, 39, 39);
     text-align: center;
-    font: 900 1.8em Impact, Charcoal, sans-serif;
+    font: bold 1.8em Impact, Charcoal, sans-serif;
     text-decoration: underline;
     letter-spacing: 0.03em;
     text-shadow: 2px 2px 2px rgb(14, 9, 9);
