--- a/css/stil.css
+++ b/css/stil.css
@@ -25,7 +25,7 @@ nav ul a li{
     color: white;
     text-decoration: none;
     letter-spacing: 0.03em;
-    font: 200 1.4em Impact, "Rockwell Extra Bold", sans-serif;
+    font: 200 1.4em Impact, Rockwell Extra Bold, sans-serif;
     box-shadow: 3px 3px 10px rgb(124, 29, 29), -3px -3px 5px rgb(99, 39, 39), 3px -3px 3px rgb(49, 8, 8);
     transition: 0.5s;
 }
@@ -129,7 +129,7 @@ nav ul li:hover:not(.trenutna){
 .tekst ul{
     list-style-type:square;
     color: rgb(160, 39, 39);
-    font-family: Impact, "Rockwell Extra Bold", sans-serif; 
+    font-family: Impact, Rockwell Extra Bold, sans-serif; 
     background-color: black;
     box-shadow: 0px 5px 5px black;
 }
@@ -144,7 +144,7 @@ nav ul li:hover:not(.trenutna){
     margin-top:3px;
     color: rgb(160, 39, 39);
     text-align: center;
-    font: bold 1.8em Impact, Charcoal, sans-serif;
+    font: bold 1.8em Impact, Arial Black, sans-serif;
     text-decoration: underline;
     letter-spacing: 0.03em;
     text-shadow: 2px 2px 2px rgb(14, 9, 9);
