--- a/css/stil.css
+++ b/css/stil.css
@@ -16,12 +16,6 @@ nav:hover{
 nav ul {
     list-style-type: none;
 }
-@font-face {
-    font-family: Impacto;
-    font-weight: bold;
-    src: url("Anton-Regular.ttf")
-    format("ttf");
-}
 nav ul a li{
     display: inline-block;
     background: black;
@@ -31,7 +25,7 @@ nav ul a li{
     color: white;
     text-decoration: none;
     letter-spacing: 0.03em;
-    font: 200 1.4em Impacto, Impact, sans-serif;
+    font: 200 1.4em Impact, sans-serif;
     box-shadow: 3px 3px 10px rgb(124, 29, 29), -3px -3px 5px rgb(99, 39, 39), 3px -3px 3px rgb(49, 8, 8);
     transition: 0.5s;
 }
@@ -87,7 +81,7 @@ nav ul li:hover:not(.trenutna){
 }
 .pocetna li span{
     color:rgb(160, 39, 39);
-    font-family:  Impacto, Impact, Charcoal, sans-serif;
+    font-family:  Impact, Charcoal, sans-serif;
     vertical-align: middle;
 }
 .pocetna div ul {
@@ -135,7 +129,7 @@ nav ul li:hover:not(.trenutna){
 .tekst ul{
     list-style-type:square;
     color: rgb(160, 39, 39);
-    font-family:  Impacto, Impact, sans-serif; 
+    font-family:  Impact, sans-serif; 
     background-color: black;
     box-shadow: 0px 5px 5px black;
 }
@@ -150,7 +144,7 @@ nav ul li:hover:not(.trenutna){
     margin-top:3px;
     color: rgb(160, 39, 39);
     text-align: center;
-    font: bold 1.8em  Impacto, Impact, sans-serif;
+    font: bold 1.8em  Impact, sans-serif;
     text-decoration: underline;
     letter-spacing: 0.03em;
     text-shadow: 2px 2px 2px rgb(14, 9, 9);
@@ -166,7 +160,7 @@ nav ul li:hover:not(.trenutna){
     color: rgb(255, 102, 102);
 }
 .header{
-    font: 100 1.8em  Impacto, Impact, sans-serif;
+    font: 100 1.8em  Impact, sans-serif;
     letter-spacing: 0.03em;
     color: rgb(160, 39, 39);
     display: block !important;
