--- a/css/stil.css
+++ b/css/stil.css
@@ -246,4 +246,7 @@ a{
     div.tekst:nth-child(2) > div:nth-child(2){
         display: block;
     }
+    .pocetna div ul{
+        text-align: left;
+    }
 }
