--- a/css/stil.css
+++ b/css/stil.css
@@ -221,6 +221,10 @@ a{
     color: rgb(160, 39, 39);
     background-color: white;
 }
+.fas{
+    display: inline-block;
+    width: 3em;
+}
 @media only screen and (max-width: 1220px){
     .liste > div{
         width:45%;
