--- a/css/stil.css
+++ b/css/stil.css
@@ -96,8 +96,9 @@ nav ul li:hover:not(.trenutna){
     display: inline-block;
     vertical-align: middle;
 }
-div.pocetna:nth-child(2) > div:nth-child(2) > h1:nth-child(1){
+div.pocetna:nth-child(2) > div:nth-child(2) > ul > li:nth-child(1){
     font-family:  "Lobster", Charcoal, sans-serif;
+    margin-bottom: 5px;
 }
 .slikaPocetna{
     background-image: url("../images/ja2.jpeg");
@@ -226,7 +227,7 @@ a{
 }
 .fas{
     display: inline-block;
-    width: 3em;
+    width: 2em;
 }
 @media only screen and (max-width: 1220px){
     .liste > div{
