Added hobbies and icons

--- a/css/stil.css
+++ b/css/stil.css
@@ -78,8 +78,9 @@ nav ul li:hover:not(.trenutna){
     background-repeat: no-repeat;
     background-position-y: center;
     background-position-x: right;
+    background-size: 30%;
 }
-.pocetna li span{
+.pocetna li span,  body > div.main > div:nth-child(3) > h1{
     color:rgb(160, 39, 39);
     font-family:  "Anton", Charcoal, sans-serif;
     vertical-align: middle;
@@ -185,10 +186,11 @@ a{
     text-decoration: none;  
 }
 .faded{
-    font-weight:bold !important; 
-    font-style:italic !important; 
-    color: rgba(255, 255, 255, 0.384) !important;
-    font-size: 0.85em !important;
+    font-family: "Anton", sans-serif !important;
+    letter-spacing: 0.03em !important;
+    color: rgba(255, 255, 255, 0.322) !important;
+    font-size: 0.9em !important;
+    vertical-align: bottom;
 }
 .footer{
     border:2px solid black;
@@ -230,19 +232,64 @@ a{
     display: inline-block;
     width: 2em;
 }
+#favourite i, body > div.main > div:nth-child(4) div{
+    width:33%;
+    font-size:400%;
+    text-align: center;
+    margin-bottom: 20px;
+    color: rgb(160, 39, 39);
+}
+body > div.main > div:nth-child(4) div i{
+    transition: 0.5s;
+}
+body > div.main > div:nth-child(4) div i:hover {
+    color:white;
+    font-size: 105%;
+}
+#favourite {
+    animation: favourite 5s alternate-reverse ease-in-out infinite;
+    width: 80%;
+}
+
+@keyframes favourite{
+    0% {
+        margin-left:25%;
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    100% {
+        margin-left:-10%;
+        opacity: 0;
+    }
+}
+body > div.tekst.pocetna.main > div:nth-child(2) ul{
+    background-color: transparent;
+    box-shadow: none;
+}
 @media only screen and (max-width: 1220px){
-    .liste > div{
-        width:45%;
+    .liste > div, #favourite i, body > div.main > div:nth-child(4) div{
+        width: 32%;
+    }
+    .pocetna{
+        background-size: 25%;
+        background-position-y: 100%;
     }
 }
 @media only screen and (max-width: 800px) {
-    .liste > div{
+    .liste > div, {
         width:100%;
     }
-    .pocetna{
-        background-image: none;
+    body > div.main > div:nth-child(4) div{
+        width:49%;
+        font-size:200%;
         text-align: center;
     }
+    .pocetna{
+        text-align: center;
+    }
+    
     .slikaPocetna{
         margin: 0 auto;
         position: relative;
@@ -257,5 +304,8 @@ a{
     }
     .pocetna div ul{
         text-align: left;
+    }
+    #favourite i,.liste > div{
+        width: 100%;
     }
 }
