--- a/css/stil.css
+++ b/css/stil.css
@@ -139,6 +139,9 @@ div.pocetna:nth-child(2) > div:nth-child(2) > ul > li:nth-child(1){
     background-color: black;
     box-shadow: 0px 5px 5px black;
 }
+.tekst ul li{
+    margin-bottom:20px;
+}
 .tekst ul li span{
     color:white;
     font: normal 0.9em Arial;
@@ -188,8 +191,7 @@ a{
 .faded{
     font-family: "Anton", sans-serif !important;
     letter-spacing: 0.03em !important;
-    color: rgba(255, 255, 255, 0.322) !important;
-    font-size: 0.9em !important;
+    color: #5C5C5C !important;
     vertical-align: bottom;
 }
 .footer{
